Bug 1267021 - Use fallible allocation and move semantics for Push events. r=wchen

MozReview-Commit-ID: H43zrz5fhvU